# Slopjective-C

./: .gitignore  .markdownlint-cli2.jsonc  .npmrc  .prettierignore  00_TABLE_OF_CONTENTS.md  01A_DECISIONS_LOG.md  01B_ATTRIBUTE_AND_SYNTAX_CATALOG.md  01C_LOWERING_AND_RUNTIME_CONTRACTS.md  01D_MODULE_METADATA_AND_ABI_TABLES.md  01E_CONFORMANCE_PROFILE_CHECKLIST.md  01_INTRODUCTION.md  02_PART_0_BASELINE_AND_NORMATIVE_REFERENCES.md  03_PART_1_VERSIONING_COMPATIBILITY_CONFORMANCE.md  04_PART_2_MODULES_NAMESPACING_API_SURFACES.md  05_PART_3_TYPES_NULLABILITY_OPTIONALS_GENERICS_KEYPATHS.md  06_PART_4_MEMORY_MANAGEMENT_OWNERSHIP.md  07_PART_5_CONTROL_FLOW_SAFETY_CONSTRUCTS.md  08_PART_6_ERRORS_RESULTS_THROWS.md  09_PART_7_CONCURRENCY_ASYNC_AWAIT_ACTORS.md  10_PART_8_SYSTEM_PROGRAMMING_EXTENSIONS.md  11_PART_9_PERFORMANCE_AND_DYNAMISM_CONTROLS.md  12_PART_10_METAPROGRAMMING_DERIVES_MACROS_PROPERTY_BEHAVIORS.md  13_PART_11_INTEROPERABILITY_C_CPP_SWIFT.md  14_PART_12_DIAGNOSTICS_TOOLING_TESTS.md  AGENTS.md  ATTRIBUTE_AND_SYNTAX_CATALOG.md  CONFORMANCE_PROFILE_CHECKLIST.md  CONTRIBUTING.md  DECISIONS_LOG.md  INTRODUCTION.md  LOWERING_AND_RUNTIME_CONTRACTS.md  MODULE_METADATA_AND_ABI_TABLES.md  PART_0_BASELINE_AND_NORMATIVE_REFERENCES.md  PART_10_METAPROGRAMMING_DERIVES_MACROS_PROPERTY_BEHAVIORS.md  PART_11_INTEROPERABILITY_C_CPP_SWIFT.md  PART_12_DIAGNOSTICS_TOOLING_TESTS.md  PART_1_VERSIONING_COMPATIBILITY_CONFORMANCE.md  PART_2_MODULES_NAMESPACING_API_SURFACES.md  PART_3_TYPES_NULLABILITY_OPTIONALS_GENERICS_KEYPATHS.md  PART_4_MEMORY_MANAGEMENT_OWNERSHIP.md  (+10 more)
native/objc3c/: CMakeLists.txt
native/objc3c/src/: ARCHITECTURE.md  main.cpp
native/objc3c/src/adr/: ADR-0001-layered-frontend-boundaries.md  ADR-0002-cli-vs-library-separation.md  ADR-0003-diagnostics-determinism-contract.md
native/objc3c/src/ast/: objc3_ast.h
native/objc3c/src/contracts/: objc3_frontend_diagnostics_bus_contract.h
native/objc3c/src/diag/: objc3_diag_types.h  objc3_diag_utils.cpp  objc3_diag_utils.h
native/objc3c/src/driver/: objc3_cli_options.cpp  objc3_cli_options.h  objc3_compilation_driver.cpp  objc3_compilation_driver.h  objc3_driver_main.cpp  objc3_driver_main.h  objc3_driver_shell.cpp  objc3_driver_shell.h  objc3_frontend_options.cpp  objc3_frontend_options.h  objc3_llvm_capability_routing.cpp  objc3_llvm_capability_routing.h  objc3_objc3_path.cpp  objc3_objc3_path.h  objc3_objectivec_path.cpp  objc3_objectivec_path.h
native/objc3c/src/io/: objc3_cli_reporting_output_contract_conformance_corpus_expansion_surface.h  objc3_cli_reporting_output_contract_conformance_matrix_implementation_surface.h  objc3_cli_reporting_output_contract_core_feature_expansion_surface.h  objc3_cli_reporting_output_contract_core_feature_surface.h  objc3_cli_reporting_output_contract_diagnostics_hardening_surface.h  objc3_cli_reporting_output_contract_edge_case_compatibility_surface.h  objc3_cli_reporting_output_contract_edge_case_expansion_and_robustness_surface.h  objc3_cli_reporting_output_contract_recovery_determinism_hardening_surface.h  objc3_cli_reporting_output_contract_scaffold.h  objc3_diagnostics_artifacts.cpp  objc3_diagnostics_artifacts.h  objc3_file_io.cpp  objc3_file_io.h  objc3_manifest_artifacts.cpp  objc3_manifest_artifacts.h  objc3_process.cpp  objc3_process.h  objc3_toolchain_runtime_ga_operations_core_feature_surface.h  objc3_toolchain_runtime_ga_operations_scaffold.h
native/objc3c/src/ir/: objc3_ir_emitter.cpp  objc3_ir_emitter.h
native/objc3c/src/lex/: objc3_lexer.cpp  objc3_lexer.h
native/objc3c/src/libobjc3c_frontend/: api.h  c_api.cpp  c_api.h  frontend_anchor.cpp  objc3_cli_frontend.cpp  objc3_cli_frontend.h  version.h
native/objc3c/src/lower/: objc3_lowering_contract.cpp  objc3_lowering_contract.h
native/objc3c/src/parse/: objc3_ast_builder.cpp  objc3_ast_builder.h  objc3_ast_builder_contract.cpp  objc3_ast_builder_contract.h  objc3_diagnostic_grammar_hooks_core_feature.cpp  objc3_diagnostic_grammar_hooks_core_feature.h  objc3_diagnostic_grammar_hooks_core_feature_expansion_surface.h  objc3_diagnostic_grammar_hooks_edge_case_compatibility_surface.h  objc3_diagnostic_source_precision_scaffold.cpp  objc3_diagnostic_source_precision_scaffold.h  objc3_diagnostics_bus.h  objc3_parse_support.cpp  objc3_parse_support.h  objc3_parser.cpp  objc3_parser.h  objc3_parser_contract.h
native/objc3c/src/pipeline/: frontend_pipeline_contract.h  objc3_final_readiness_gate_core_feature_implementation_surface.h  objc3_frontend_artifacts.cpp  objc3_frontend_artifacts.h  objc3_frontend_pipeline.cpp  objc3_frontend_pipeline.h  objc3_frontend_types.h  objc3_ir_emission_completeness_scaffold.cpp  objc3_ir_emission_completeness_scaffold.h  objc3_ir_emission_core_feature_implementation_surface.h  objc3_lowering_pipeline_pass_graph_core_feature_surface.cpp  objc3_lowering_pipeline_pass_graph_core_feature_surface.h  objc3_lowering_pipeline_pass_graph_scaffold.cpp  objc3_lowering_pipeline_pass_graph_scaffold.h  objc3_lowering_runtime_diagnostics_surfacing_conformance_matrix_implementation_surface.h  objc3_lowering_runtime_diagnostics_surfacing_core_feature_expansion_surface.h  objc3_lowering_runtime_diagnostics_surfacing_core_feature_implementation_surface.h  objc3_lowering_runtime_diagnostics_surfacing_diagnostics_hardening_surface.h  objc3_lowering_runtime_diagnostics_surfacing_edge_case_compatibility_surface.h  objc3_lowering_runtime_diagnostics_surfacing_edge_case_expansion_and_robustness_surface.h  objc3_lowering_runtime_diagnostics_surfacing_recovery_determinism_hardening_surface.h  objc3_lowering_runtime_diagnostics_surfacing_scaffold.h  objc3_lowering_runtime_stability_core_feature_implementation_surface.h  objc3_lowering_runtime_stability_invariant_scaffold.h  objc3_ownership_aware_lowering_behavior_scaffold.h  objc3_parse_lowering_readiness_surface.h  objc3_runtime_import_surface.cpp  objc3_runtime_import_surface.h  objc3_semantic_diagnostic_taxonomy_and_fix_it_synthesis_conformance_corpus_expansion_surface.h  objc3_semantic_diagnostic_taxonomy_and_fix_it_synthesis_core_feature_expansion_surface.h  (+11 more)
(+16710 files in other folders)
